fix(website): fix image width issue on firefox

--- a/website/src/pages/Home.scss
+++ b/website/src/pages/Home.scss
@@ -70,6 +70,7 @@ $break-xxlarge: 1590px;
       }
 
       img {
+        max-width: 100%;
         height: 100%;
         display: block;
         margin: auto;
